fix cv for dark mode

--- a/style.css
+++ b/style.css
@@ -123,6 +123,20 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+@media (prefers-color-scheme: dark) {
+  .content-grid {
+    margin: 20px;
+  }
+
+  .education, .experience {
+    padding: 15px;
+    background-color: #333;
+    border: 1px solid #444;
+    border-radius: 8px;
+    color: #fff;
+  }
+}
+
 .color-scheme {
   position: absolute;
   top: 1rem;
